--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         features:
           - color
-          - hello
+          - cowsay
         baseImage:
           - debian:latest
           - ubuntu:latest
